5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1674_1107.log
== TEST (2019-04-26 21:37:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):

	
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:38:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("valor de 1 a 6: "))
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):

	print("a")
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:38:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("valor de 1 a 6: "))
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):

	print("a")
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:48:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):
elif(x==0):
	x= "domingo"
	w = (x+y)%7
	
	print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif(x==0):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:49:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):
	elif(x==0):
	x= "domingo"
	w = (x+y)%7
	
	print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif(x==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:49:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):
	elif(x==0):
	x= "domingo"
	w = (x+y)%7
	
	print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif(x==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:49:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):
	elif(x==0):
		x= "domingo"
		w = (x+y)%7
		
	print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif(x==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:49:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if((x==0)or(x==1)or(x==2)or(x==3)or(x==4)or(x==5)or(x==6)):
	elif((x==0)):
		x= "domingo"
		w = (x+y)%7
		
		print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif((x==0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:50:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
elif(x==0):
		x= "domingo"
		w = (x+y)%7
		
		print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif(x==0):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:50:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	elif(x==0):
		x= "domingo"
		w = (x+y)%7
		
		print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif(x==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:51:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
elif(x==0):
	x= "domingo"
	w = (x+y)%7
		
	print("Hoje eh ",x," e o dia futuro eh",w)
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 7
    elif(x==0):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:52:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numeor de dias apos hj"))
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x==0):
		x= "domingo"
		w = (x+y)%7
		
		print("Hoje eh ",x," e o dia futuro eh",w)
	
		
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:53:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x==0):
		x= "domingo"
		w = (x+y)%7
		
		print("Hoje eh ",x," e o dia futuro eh",w)
	
		
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:55:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))
"0"= "domingo"

if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x==0):
		#x= "domingo"
		w = y
		
		print("Hoje eh ",x," e o dia futuro eh",w)
	
		
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"= "domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:55:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))
0= "domingo"

if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x==0):
		#x= "domingo"
		w = y
		
		print("Hoje eh ",x," e o dia futuro eh",w)
	
		
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 6
    0= "domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:47:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x==0):
		dh="domingo"
		
	elif(df==0):
		df="domingo"
	elif(k==1):	
		df="segunda"
	elif(df==2):
		df="terca"
	elif(df==3):
		df="quarta"
	elif(df==4):
		df="quinta"
	elif(df==5):
		df="sexta"
	elif(df==6):
		df="sabado"
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:49:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x==0):
		x="domingo"
		
	elif(df==0):
		df="domingo"
	elif(k==1):	
		df="segunda"
	elif(df==2):
		df="terca"
	elif(df==3):
		df="quarta"
	elif(df==4):
		df="quinta"
	elif(df==5):
		df="sexta"
	elif(df==6):
		df="sabado"
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:53:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x==0):
		x="domingo"
		
	elif(df==0):
		df="domingo"
	elif(k==1):	
		df="segunda"
	elif(df==2):
		df="terca"
	elif(df==3):
		df="quarta"
	elif(df==4):
		df="quinta"
	elif(df==5):
		df="sexta"
	elif(df==6):
		df="sabado"
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:58:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1)	
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- ERROR:
File "XXXX", line 26
    elif(x==1)	
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:02:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:02:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:06:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:06:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- EXECUTION TIME:
0.149285
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada  9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh  sabado  e o dia do futuro eh  segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:06:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh ",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:06:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:06:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh",df)	
else:
	print("A entrada ",x," eh invalida")
-- EXECUTION TIME:
0.190062
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada  9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh  sabado  e o dia do futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:09:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:09:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia do futuro eh",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:09:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia futuro eh",df)	
else:
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:09:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("numero do dia de hj: "))
y = int(input("numero de dias apos hj: "))

df = (x + y)%7
if(x==0 or x==1 or x==2 or x==3 or x==4 or x==5 or x==6):
	if(x == 0):
		x="domingo"
		
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	elif(x==1):
		x="segunda"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==2):	
		x="terca"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==3):
		x="quarta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==4):
		x="quinta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==5):
		x="sexta"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
	elif(x==6):
		x="sabado"
		if(df==0):
			df="domingo"
		elif(df==1):	
			df="segunda"
		elif(df==2):
			df="terca"
		elif(df==3):
			df="quarta"
		elif(df==4):
			df="quinta"
		elif(df==5):
			df="sexta"
		elif(df==6):
			df="sabado"
			
	print("Hoje eh ",x," e o dia futuro eh",df)	
else:
	print("A entrada ",x," eh invalida")
-- EXECUTION TIME:
0.196322
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada  9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh  sabado  e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
